--- a/package.json
+++ b/package.json
@@ -15,14 +15,32 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/rubik": "^4.5.11",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "contentful": "^9.1.33",
     "gatsby": "^4.19.2",
     "gatsby-plugin-image": "^2.19.0",
     "gatsby-plugin-mdx": "^3.19.0",
+    "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-sharp": "^4.19.0",
+    "gatsby-plugin-typography": "^4.21.0",
+    "gatsby-remark-images-contentful": "^5.20.0",
+    "gatsby-source-contentful": "^7.18.0",
     "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-remark": "^5.20.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.20",
+    "typography": "^0.16.21"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "gatsby-plugin-postcss": "^5.20.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
